[tool.poetry]
name = "api-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "api_project"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.2.1"
requests = "^2.32.2"
pyqt6 = "^6.7.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
